<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

    <string name="weather_app_name">Bobs Weather Advice</string>
    <string name="title_home">Bobs Weather Advice</string>
    <string name="title_settings">Settings</string>
    <string name="title_my_advice">My advice</string>
    <string name="title_agenda">Agenda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="main_today">Today</string>
    <string name="main_planning">Planning</string>

    <string name="temp_unit_celsius">°C</string>
    <string name="temp_unit_fahrenheit">°F</string>
    <string name="wind_speed_unit_kph">km/h</string>
    <string name="wind_speed_unit_mph">MPH</string>

    <string name="settings_location">Location</string>
    <string name="enabled_gps_location">GPS</string>
    <string name="enabled_wifi_location">WiFi</string>

    <string name="settings_whitelisted_wifi_networks">Whitelisted WiFi networks</string>

    <string name="settings_sync">Sync</string>
    <string name="enabled_agenda_sync">Agenda</string>
    <string name="enabled_alarm_sync">Alarm</string>
    <string name="enabled_demo_mode">Demo Mode</string>

    <string name="settings_interests">Interests</string>

    <string name="menu_header">Project App HRO Dinf1</string>
    <string name="menu_payoff">Team working apps</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_advice">My advice</string>
    <string name="menu_settings">Settings</string>

    <string name="advice_sunglasses">Put on sunglasses because the sun is bright in %1$s.</string>
    <string name="advice_umbrella">Take an umbrella because it will rain in %1$s.</string>
    <string name="advice_beanie_hat">Put on a beanie hat because it is very cold in %1$s.</string>
    <string name="advice_gloves">Put on your gloves hat because it is very cold in %1$s.</string>
    <string name="advice_raincoat">Take your raincoat because it windy and it will rain in %1$s.</string>
    <string name="advice_wool">Put on wool clothing because it will be chill in %1$s.</string>
    <string name="advice_cotton">Put on cotton clothing because it will be warm in %1$s.</string>

    <string name="advice_barbecue">When you can, pick up some meat for a barbie. The weather is nice and rain predictions are low.</string>
    <string name="advice_beach">Grab your towels and swimsuit to head for the beach, it\'s going to be hot and sunny!</string>
    <string name="advice_bike">It\'s a good idea to travel by bike today. Not too much wind or rain and a nice temperature to be active.</string>
    <string name="advice_soccer">The weather is nice for outdoor sports. Play soccer with your friends for example.</string>
    <string name="advice_water_sports">The weather is nice to get active on the water. Surfing the waves, kite-surfing or sailing are good options today.</string>
    <string name="barbecue_chip">Barbecue</string>
    <string name="beach_chip">Beach</string>
    <string name="bike_chip">Bicycle</string>
    <string name="walking_chip">Walking</string>
    <string name="soccer_chip">Soccer</string>
    <string name="fishing_chip">Fishing</string>
    <string name="watersport_chip">Water sports</string>

    <string name="delete_wifi">Delete WiFi network</string>
    <string name="add_wifi">Add WiFi network</string>
    <string name="delete_wifi_confirm">Are you sure you want to delete this network from the list?</string>

    <string name="select_network">Select one Network:</string>
    <string name="wifi_is_disabled">WiFi is disabled</string>
    <string name="enable_wifi_try_again">Enable WiFi mode and try again</string>

    <string name="demo_demonstrate_app">Demonstrate app</string>
    <string name="demo_university_rotterdam">Hogeschool Rotterdam</string>
    <string name="demo_celebrate_summer">Celebrate the summer!</string>
    <string name="demo_club_hollywood_rotterdam">Club Hollywood Rotterdam</string>
</resources>
